fix(button): vertical alignment correction

--- a/packages/button/src/button-base.css
+++ b/packages/button/src/button-base.css
@@ -13,6 +13,7 @@ governing permissions and limitations under the License.
 :host {
     display: inline-flex;
     flex-direction: row;
+    vertical-align: top;
 }
 
 #button {
